overlay/traefik/dashboard-http/ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-auth
  namespace: #@ data.values.traefik.namespace
  labels:
    #@yaml/text-templated-strings
    (@= data.values.domain @)/loadbalancer: default
spec:
  basicAuth:
    realm: "traefik dashboard"
    secret: traefik-dashboard
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: #@ data.values.traefik.namespace
  labels:
    #@yaml/text-templated-strings
    (@= data.values.domain @)/loadbalancer: default
spec:
  entryPoints:
  - http
  routes:
  - match: #@ "Host(`{}.{}`)".format(data.values.traefik.dns.name, data.values.domain)
    kind: Rule
    priority: 12
    services:
    - name: traefik-dashboard
      port: 80
      strategy: RoundRobin
    middlewares:
    - name: traefik-dashboard-auth
    - name: security
